# SpagettyPy

./: README.md  coverage.txt  diagram.html  pyproject.toml  pytest.ini
src/spagettypy/analyzer/: model.py
src/spagettypy/analyzer/exporters/: interfaces.py  mermaid_exporter.py  tree_exporter.py
src/spagettypy/analyzer/graph/: __init__.py  filters.py  finders.py  interfaces.py  networkx_facade.py
src/spagettypy/analyzer/parsers/: base.py  directory_parser.py  interfaces.py  structure_analyzer.py
src/spagettypy/ui/: cli.py
src/spagettypy/ui/commands/: have.py
tests/: test_base_parsers.py  test_cli_smoke.py  test_directory_parser.py  test_graph_filters.py  test_graph_finders.py  test_networkx_facade.py  test_structure_analyzer.py  test_tree_exporter.py
